# H2TC

./: .gitignore  .~lock.log.xlsx#  README.md  log-annotated.xlsx  log.xlsx  requirements.txt
dev/: README.md
dev/ZED_SDK_installer/: README.md
dev/docker/: Dockerfile  README.md  prophesee.list
dev/time_sync/: README.md  ptp_server_unicast.conf
doc/: README.md  alignment.md  anno_to_correct.xlsx  annotation_progress.md  annotator.md  data-structure-concise.md  data_file_explanation.md  hand_pose.md  optitrack.md  postprocessing.md  processing_tech_details.md  processing_techdetails.md  processor  recorder.md  stream_sync.md  subject_height_arm_length.xlsx
register/: README.md  objects.csv  subjects.csv
src/: README.md  annotate.py  extract.py  log.py  postprocess.py  process.py  process_lx.py  recorder.py  visualize.py
src/natnet_client/: .clang-format  CMakeLists.txt  README.md
src/natnet_client/include/client/: optitrack_collect.h
src/natnet_client/include/natnet/: NatNetCAPI.h  NatNetClient.h  NatNetRepeater.h  NatNetRequests.h  NatNetTypes.h
src/natnet_client/samples/SampleClient/: SampleClient.cpp
src/natnet_client/src/: example_main.cpp  optitrack_collect.cpp
src/remote_display/: main.py  main_master.py
src/tools/: README.md  align_correct.py  align_correct_lx.py  clean.py  divide_throw_catch.py  merge_log.py  metavision_raw_to_csv.py  rezip_lx.py  statistics.py  tempCodeRunnerFile.py  test_multi_zed.py  unzip.py  unzip_lx.py  zipdata_lx.py
src/utils/: README.md  align.py  event.py  extract_hand_joint_positions.py  he.py  optitrack.py  (+6 more)
(+32 files in other folders)
